<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item android:id="@+id/homePage"
            android:title="@string/home"
            android:icon="@drawable/image_home"/>
        <item android:id="@+id/ratingApp"
            android:title="@string/rating_app"
            android:icon="@drawable/image_rating"/>
        <item android:id="@+id/devConnection"
            android:title="@string/connect_admin"
            android:icon="@drawable/image_dev" />
        <item android:id="@+id/privacyPolicy"
            android:title="@string/privacy_policy"
            android:icon="@drawable/image_privacy_policy"/>
    </group>
</menu>