<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_2">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signIn"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:fontFamily="@font/madimi"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/logInBtnLayout2"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/userName"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/black"
            app:boxStrokeErrorColor="@color/whiteGreen"
            app:startIconDrawable="@drawable/image_user_24px"
            android:layout_marginTop="10dp"
            app:startIconTint="@color/whiteGreen"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/logIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordBtnLayout"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/password"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/black"
            app:boxStrokeErrorColor="@color/whiteGreen"
            app:startIconDrawable="@drawable/image_password_24px"
            android:layout_marginTop="10dp"
            app:startIconTint="@color/whiteGreen"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rePasswordBtnLayout"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/rePassword"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/black"
            app:boxStrokeErrorColor="@color/whiteGreen"
            app:startIconDrawable="@drawable/image_password_24px"
            android:layout_marginTop="10dp"
            app:startIconTint="@color/whiteGreen"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logInBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/style_base"
            android:text="@string/signIn"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/madimi"
            android:layout_marginBottom="4dp"
            android:padding="16dp"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/signInText"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/toLogInBtn"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logIn"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btnGoogleSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:buttonSize="wide"
            android:layout_marginTop="32dp"
            app:colorScheme="dark"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>