<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/appTheme"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="4dp"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/image_left"
            android:layout_margin="4dp"/>
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/toolbar"
            app:titleTextColor="@color/black"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/app_name"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/white"
        android:orientation="vertical"
        android:gravity="center_vertical">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_add_text"
            android:textSize="32sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/madimi"
            android:layout_gravity="center_horizontal"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/testNameLayout"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/notification_title"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/black"
            app:boxStrokeErrorColor="@color/whiteGreen"
            app:startIconDrawable="@drawable/image_text_24px"
            android:layout_marginTop="10dp"
            app:startIconTint="@color/whiteGreen"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setNewNotify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionLayout"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/notification_description"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/black"
            app:boxStrokeErrorColor="@color/whiteGreen"
            app:startIconDrawable="@drawable/image_text_24px"
            android:layout_marginTop="10dp"
            app:startIconTint="@color/whiteGreen"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setNewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/timeDateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/style_btn"
                android:padding="8dp"
                android:layout_margin="4dp"
                android:gravity="center">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:padding="8dp"
                    app:srcCompat="@drawable/image_schedule"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notification_time"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:padding="4dp"
                    android:fontFamily="@font/madimi"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/locationBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/style_btn"
                android:gravity="center"
                android:layout_margin="4dp"
                android:padding="8dp"
                android:visibility="gone">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:padding="8dp"
                    app:srcCompat="@drawable/image_placeholder"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notification_location"
                    android:textSize="20sp"
                    android:padding="4dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/madimi"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_add"
            android:background="@drawable/style_base"
            android:padding="16dp"
            android:textSize="24sp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:fontFamily="@font/madimi"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>