<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="320dp"
        android:layout_height="420dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/style_base_2">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageD"
            android:layout_width="160dp"
            android:layout_height="160dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp"
            app:srcCompat="@drawable/image_logout"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imageD"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/layoutInner"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:text="@string/logout_dialog_text"
            app:fontFamily="@font/madimi"
            android:textSize="20sp"
            android:gravity="center"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layoutInner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:fontFamily="@font/madimi"
                android:text="@string/yes"
                android:background="@drawable/style_base_2"
                android:textSize="20sp"
                android:layout_margin="4dp"
                android:textColor="@color/black"
                android:id="@+id/logOutYes"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logOutNo"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:fontFamily="@font/madimi"
                android:text="@string/no"
                android:textColor="@color/black"
                android:background="@drawable/style_base_2"
                android:textSize="20sp"
                android:layout_margin="4dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>